// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Divider[Base] should render correctly  1`] = `
<div
  style="font-size: 12px;"
>
  <p>
    A design is a plan or specification for the construction of an object.
  </p>
  <div
    class="c-pzbqfd soui-divider-wrapper c-m3onk0 soui-divider-horizontal"
  />
  <p>
    A design is a plan or specification for the construction of an object.
  </p>
</div>
`;

exports[`Divider[Base] should render correctly about text 1`] = `
<div
  style="font-size: 12px;"
>
  <p>
    A design is a plan or specification for the construction of an object.
  </p>
  <div
    class="c-pzbqfd soui-divider-wrapper c-m3onk0 soui-divider-horizontal c-59907l soui-divider-with-text cdrfap0 soui-divider-with-text-center"
  >
    <span
      class="cqh5aiv soui-divider-inner-text"
    >
      Center
    </span>
  </div>
  <p>
    A design is a plan or specification for the construction of an object.
  </p>
  <div
    class="c-pzbqfd soui-divider-wrapper c-m3onk0 soui-divider-horizontal c-59907l soui-divider-with-text c-bafv6y soui-divider-with-text-left"
  >
    <span
      class="cqh5aiv soui-divider-inner-text"
    >
      Left
    </span>
  </div>
  <p>
    A design is a plan or specification for the construction of an object.
  </p>
  <div
    class="c-pzbqfd soui-divider-wrapper c-m3onk0 soui-divider-horizontal c-59907l soui-divider-with-text c599qy5 soui-divider-with-text-right"
  >
    <span
      class="cqh5aiv soui-divider-inner-text"
    >
      Right
    </span>
  </div>
  <p>
    A design is a plan or specification for the construction of an object.
  </p>
</div>
`;

exports[`Divider[Base] should render correctly about vertical 1`] = `
<span
  style="display: inline-block; line-height: 22px; font-size: 14px;"
>
  Item 1
</span>
`;
